# livekit_composite

./: .gitignore  README.md  USAGE.md  knowledge_guidence.md  pull_kb.py  repo.conf  requirements.txt  summarize_changes.py  sync_livekit_repos.py
composite_chrome_helper/: README.md  content-script.js  main.js  manifest.json  popup.html
doc/: full-llm.txt
knowledge_base/: avoiding_room_id_reuse_when_re-creating_rooms_with_the_same_.md  building_multi-agent_architectures_with_livekit_agents.md  capturing_the_first_few_seconds_of_a_call_for_processing.md  configuring_the_client_sdk_for_optimal_video_quality.md  createroom___is_taking_too_long.md  creating_and_publishing_custom_metrics.md  creating_sip_inbound_trunks_and_dispatch_rules_with_python_s.md  debugging_audio_video_sync_issues_in_livekit_publishing.md  diagnosing_connection_errors_with_connection_test_utility.md  firewall_tips.md  how_can_i_reduce_latency_in_voice_agents_using_stt__tts_and_.md  how_do_i_configure_barvisualizer_in_react_.md  how_does_end-of-utterance_detection_work_in_conversations_.md  how_is_connection_quality_determined_.md  how_to_capture_real-time_agent_transcriptions_during_convers.md  how_to_detect_and_handle_silence_during_calls.md  how_to_detect_when_an_agent_has_finished_speaking.md  how_to_enable_agent-to-agent_speech_detection_in_livekit.md  how_to_enable_auto-egress_with_sip.md  how_to_get_help_from_livekit_with_agents.md  slack_etiquette.md  (+21 more)
livekit-examples/esp-webrtc-solution/solutions/livekit_demo/components/livekit_core/: CMakeLists.txt  idf_component.yml
livekit-examples/esp-webrtc-solution/solutions/livekit_demo/components/livekit_core/include/: livekit_common.h  livekit_engine.h  livekit_peer.h  livekit_signaling.h  livekit_url.h
livekit-examples/esp-webrtc-solution/solutions/livekit_demo/components/livekit_core/src/: livekit_engine.c  livekit_peer.c  livekit_signaling.c  livekit_url.c  livekit_utils.c
livekit-examples/noise-canceller/: .gitignore  README.md  main.py  noise-canceller.py  pyproject.toml
livekit-examples/realtime-room-monitor/agent-examples/: .env.examples  Makefile  pyproject.toml
livekit-examples/realtime-room-monitor/agent-examples/agent_examples/: pipeline_agent.py
livekit/client-sdk-esp32/components/livekit/: CMakeLists.txt  idf_component.yml
livekit/client-sdk-esp32/components/livekit/core/: common.h  engine.c  engine.h  livekit.c  peer.c  peer.h  protocol.h  rpc_manager.c  rpc_manager.h  signaling.c  signaling.h  system.c  system.h  url.c  url.h  utils.c  utils.h
livekit/client-sdk-esp32/components/livekit/include/: livekit.h  livekit_rpc.h
livekit/client-sdk-esp32/components/livekit/protocol/: livekit_metrics.pb.h  livekit_models.pb.h  livekit_rtc.pb.c  livekit_rtc.pb.h
livekit/client-sdk-esp32/components/livekit/protocol/protobufs/: livekit_metrics.proto  livekit_models.options  livekit_rtc.options
livekit/client-sdk-esp32/examples/voice_agent/agent/: agent.py  pyproject.toml
(+602 files in other folders)
