[project]
name = "esp-example-agent"
version = "0.1.0"
description = "Example agent for interacting with the ESP-32 voice chat example."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.0",
    "python-dotenv>=1.1.1"
]
